--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 </head>
 <body>
   <header class="header">
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <div class="overlay has-fade"></div>
+    <nav class="container flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="Easybank">
       </a>
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -35,8 +36,16 @@
 
       <a href="#" class="button header__cta hide-for-mobile">Request Invite</a> 
     </nav>
+
+    <div class="header__menu has-fade">
+      <a href="http://">Home</a>
+      <a href="http://">About</a>
+      <a href="http://">Contact</a>
+      <a href="http://">Blog</a>
+      <a href="http://">Careers</a>
+    </div>
+
   </header>
-<!-- 
   Home
   About
   Contact
@@ -117,7 +126,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div> 
   <script src="app/js/script.js"></script>
 </body>
 </html>
