--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,10 +15,17 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
   <header class="header">
     <div class="overlay has-fade"></div>
@@ -34,7 +43,7 @@
         <a href="#">Home</a><a href="#">About</a><a href="#">Contact</a><a href="#">Blog</a><a href="#">Careers</a>
       </div>
 
-      <a href="#" class="button header__cta hide-for-mobile">Request Invite</a> 
+      <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
     </nav>
 
     <div class="header__menu has-fade">
@@ -46,6 +55,7 @@
     </div>
 
   </header>
+
   <section class="hero">
     <div class="container">
       <div class="hero__image"></div>
@@ -54,7 +64,7 @@
           Next generation digital banking
         </h1>
         <p>
-          Take your financial life online. Your Easybank account will be a one-stop-shop 
+          Take your financial life online. Your Easybank account will be a one-stop-shop
           for spending, saving, budgeting, investing, and much more.
         </p>
         <a href="#" class="button hero__cta">
@@ -63,58 +73,98 @@
     </div>
   </section>
 
+  <section class="features">
+    <h2>Why choose Easyban?</h2>
+    <p>
+      We leverage Open Banking to turn your bank account into your financial hub. Control
+      your finances like never before.
+    </p>
+
+    <div class="feature__grid">
+
+
+      <div class="feature__item">
+        <div class="feature__icon"><img src="/images/icon-online.svg"></div>
+        <div class="feature__title">Online Banking</div>
+        <div class="feature__description">
+          Our modern web and mobile applications allow you to keep track of your finances
+          wherever you are in the world.
+        </div>
+      </div>
+
+    <div class="feature__item">
+      <div class="feature__icon"><img src="/images/icon-onboarding.svg"></div>
+      <div class="feature__title">Simple Budgeting</div>
+      <div class="feature__description">
+        See exactly where your money goes each month. Receive notifications when you’re
+        close to hitting your limits.
+      </div>
+    </div>
+
+    <div class="feature__item">
+      <div class="feature__icon"><img src="/images/icon-budgeting.svg"></div>
+      <div class="feature__title">Fast Onboarding</div>
+      <div class="feature__description">
+        We don’t do branches. Open your account in minutes online and start taking control
+        of your finances right away.
+      </div>
+    </div>
+
+    <div class="feature__item">
+      <div class="feature__icon"><img src="/images/icon-api.svg"></div>
+      <div class="feature__title">Open API</div>
+      <div class="feature__description">
+        Manage your savings, investments, pension, and much more from one account. Tracking
+        your money has never been easier.
+
+      </div>
+    </div>
+  </div>
+
+
+  </section>
 
 
 
 
 
 
-  Why choose Easybank?
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
 
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
 
-  
+
+
+
+
+
+
 
   Latest Articles
 
   By Claire Robinson
   Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
+  The world is getting smaller and we’re becoming more mobile. So why should you be
   forced to only receive money in a single …
 
   By Wilson Hutton
   Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
+  Our simple budgeting feature allows you to separate out your spending and set
   realistic limits each month. That means you …
 
   By Wilson Hutton
   Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+  We want you to enjoy your travels. This is why we don’t charge any fees on purchases
   while you’re abroad. We’ll even show you …
 
   By Claire Robinson
   Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+  After a lot of hard work by the whole team, we’re excited to launch our closed beta.
   It’s easy to request an invite through the site ...
 
-  
+
 
   About Us
   Contact
@@ -126,11 +176,12 @@
   Request Invite
 
   © Easybank. All Rights Reserved
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div> 
+  </div>
   <script src="app/js/script.js"></script>
 </body>
+
 </html>
