--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </section>
 
-  <section class="features">
+  <section class="feature container container--pall">
     <h2>Why choose Easyban?</h2>
     <p>
       We leverage Open Banking to turn your bank account into your financial hub. Control
