--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     </div>
   </section>
 
-  <section class="feature container container--pall">
-    <h2>Why choose Easyban?</h2>
+  <section class="feature">
+    <div class="container container--pall text-center-sm">
+    <h2>Why choose Easybank?</h2>
     <p>
       We leverage Open Banking to turn your bank account into your financial hub. Control
       your finances like never before.
@@ -119,6 +120,7 @@
 
       </div>
     </div>
+  </div>
   </div>
 
 
