--- a/index.html
+++ b/index.html
@@ -126,6 +126,66 @@
 
   </section>
 
+  <section class="articles">
+
+    <div class="article__content container container--pall">
+      <h2>Latest Articles</h2>
+
+        <div class="article__grid">
+        
+          <a href='#' class="article__item">
+            <div class="article__image" style="background-image: url('/images/image-currency.jpg');"></div>
+            <div class="article__text">
+              <div class="article__author">By Claire Robinson</div>
+              <div class="article__title">Receive money in any currency with no fees</div>
+              <div class="article__description">
+                The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …
+              </div>
+            </div>
+          </a>
+
+          <a href='#' class="article__item">
+            <div class="article__image" style="background-image: url('/images/image-currency.jpg');"></div>
+            <div class="article__text">
+              <div class="article__author">By Claire Robinson</div>
+              <div class="article__title">Receive money in any currency with no fees</div>
+              <div class="article__description">
+                The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …
+              </div>
+            </div>
+          </a>
+
+          <a href='#' class="article__item">
+            <div class="article__image" style="background-image: url('/images/image-currency.jpg');"></div>
+            <div class="article__text">
+              <div class="article__author">By Claire Robinson</div>
+              <div class="article__title">Receive money in any currency with no fees</div>
+              <div class="article__description">
+                The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …
+              </div>
+            </div>
+          </a>
+
+          <a href='#' class="article__item">
+            <div class="article__image" style="background-image: url('/images/image-currency.jpg');"></div>
+            <div class="article__text">
+              <div class="article__author">By Claire Robinson</div>
+              <div class="article__title">Receive money in any currency with no fees</div>
+              <div class="article__description">
+                The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …
+              </div>
+            </div>
+          </a>
+
+        </div>
+
+    </div>
+
+  </section>
 
 
 
@@ -136,20 +196,11 @@
 
 
 
+ 
 
-
-
-
-
-
-
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be
-  forced to only receive money in a single …
+  
+  
+  
 
   By Wilson Hutton
   Treat yourself without worrying about money
